# videodb

./: README.md  pyproject.toml
videodb/: __init__.py  __main__.py  analyze.py  cli.py  config.py  model.py  settings.py  sidecar.py
videodb/backend/: __init__.py  base.py  sidecar_backend.py
videodb/passes/: __init__.py  pass_def.py
